Fixed Nero on mobile(ish)

--- a/portal-website/src/components/Footer.css
+++ b/portal-website/src/components/Footer.css
@@ -24,7 +24,7 @@
 }
 
 .column{
-    margin-top: 30px;
+    margin-top: 0px;
     width: 33%;
     padding-left: 20px;
     color: rgb(228, 228, 228);
@@ -35,9 +35,7 @@
     background: black;
 }
 
-.h2 {
-    
-}
+
 
 .fa-linkedin {
     background: black;
