--- a/portal-website/src/components/HeroSection.css
+++ b/portal-website/src/components/HeroSection.css
@@ -3,6 +3,8 @@
     src: url(Exo2-ExtraLight.otf);  /* first font == regular */
   }
 
+
+
 .hero-container {
     background: url('./Pages/Images/Earth.jpg') center center/cover
     no-repeat;
@@ -19,6 +21,7 @@
     position: absolute;
     margin-left: 20rem;
     margin-right: 10rem
+    
 }
 
 .nero-container {
@@ -68,20 +71,32 @@
 }
 
 .text {
-    color: white;
-    font-family: Exo;
-    background-color:rgb(53, 53, 53);
+  font-size: 25px;
+  color:white;
+  font-family: Exo;
+  margin-left: 20rem;
+  margin-right: 10rem;
+  text-align: center;
+  padding-top: 7rem;
+}
+
+.text_container {
+  background-color:rgb(53, 53, 53);
 
 }
 
-.sponsors_container{
+.sponsors_container {
     position: relative;
     height: auto;
     padding-bottom: 40px;
     background-color:rgb(53, 53, 53);
     padding-left:300px;
     padding-right:300px;
+    padding-top: 40px;
     z-index: -1;
+    font-family: Exo;
+    color: white;
+    font-size: 20px;
 }
 
 .sponsor-title {
@@ -89,6 +104,7 @@
     font-family: Exo;
     color: white;
     font-size: 30px;
+    
 }
 
 .Ellingsen {
@@ -96,7 +112,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 100px;
+    height: 150px;
     max-width: 100%;
   }
 
@@ -116,10 +132,12 @@
   max-width: 100%;
 }
 
-
 .Insj {
-  height: 200px;
-  padding-right: 40px;
+  padding-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 150px;
   max-width: 100%;
 }
 
@@ -148,6 +166,13 @@
 
 }
 
+.Maskin {
+  height: 120px;
+  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 @media screen and (max-width: 600px) {
@@ -201,14 +226,26 @@
   padding-top: 40rem
 }
 
+
+.text {
+  font-size: 25px;
+  color:white;
+  font-family: Exo;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  text-align: center;
+  padding-top: 7rem;
+}
+
 .sponsors_container{
     position: relative;
     height: auto;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     background-color:rgb(53, 53, 53);
-    padding-left:0px;
-    padding-right:0px;
+    padding-left: 10px;
+    padding-right: 10px;
     z-index: -1;
+    
 }
 
 .sponsor-title {
@@ -221,10 +258,10 @@
 .Ellingsen {
     padding-top: 20px;
     display: block;
-    height: 30px;
+    height: 80px;
   }
 
-  .Romsenter {
+.Romsenter {
     padding-top: 20px;
     display: block;
     margin-left: auto;
@@ -233,11 +270,17 @@
 
 }
 
+.centered {
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
 .UIO {
   height: 200px;
-  padding-left: auto;
-  padding-right: auto;
-  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 
@@ -250,14 +293,19 @@
 
 .Dspace {
   height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   padding-right: 0px;
-  max-width: 100%;
 }
 
 .OsloMET {
-    height: 200px;
-    padding-right: 40px;
-    max-width: 100%;
+  height: 200px;
+  padding-right: 40px;
+  max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .Meteor {
@@ -268,7 +316,8 @@
 
 .Kjeller {
   height: 150px;
-  max-width: 100%;
-
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 }
