--- a/portal-website/src/components/Pages/Nero.css
+++ b/portal-website/src/components/Pages/Nero.css
@@ -208,17 +208,217 @@
 }
 
 @media screen and (max-width: 1400px) {
-  .top-text {
+  Title {
+    background-color: rgb(75, 75, 75);
+    font-family: Exo;
+    color: white;
     text-align: center;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding: 0px;
+    font-size: 30px
+  }
+  
+  .top-text {
+    font-family: Exo;
+    background-color: rgb(75, 75, 75);
+    color: white;
+    text-align: center;
+    padding-left: 0px;
+    padding-right: 0px;
     font-size: 20px
   }
-
   .rocket-image {
     background-color: rgb(75, 75, 75);
     text-align: center;
-    width: 640px;
+  }
+  
+  .rocket {
+    height: 500px;
+    padding-left: 0px;
+
+  }
+  
+  .our-work {
+    background-color: rgb(75, 75, 75);
+  }
+  
+  .work-title {
+    padding-top: 100px;
+    padding-bottom: 0px;
+    font-family: Exo;
+    color: white;
+    text-align: center;
+    font-size: 30px
+    
+  }
+  
+  .groups {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 220px
+  }
+  
+  .groups-text {
+    font-family: Exo;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 200px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+  }
+  
+  .engagement {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 220px
+  }
+  
+  .engagement-text {
+    font-family: Exo;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 200px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+    
+  }
+  
+  .sveising {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
+    height: 220px;
+    float: none
+  }
+  
+  .sveising-text {
+    font-family: Exo;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+  }
+  
+  .plumbing {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
+    height: 220px;
+    float:none;
+  }
+  
+  .plumbing-text {
+    font-family: Exo;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+  }
+  
+  .software {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 220px;
+    float:none;
+
+  }
+  
+  .software-text {
+    font-family: Exo;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 0px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 0px;
+  }
+  
+  .advisors {
+    padding-top: 20px;
+    background-color: rgb(75, 75, 75);
+    text-align: center;
+    width: auto;
+    padding-bottom: 120px;
+  }
+  
+  .advisor-title {
+    font-family: Exo;
+    color: white;
+    text-align: center;
+    font-size: 60px;
+    padding-bottom: 0px;
+  }
+  
+  .rasmus {
+    float:none;
+    padding-left: 0px;
+    height: 300px
+  }
+  
+  .rasmus-title {
+    text-align: center;
+    font-size: 30px;
+    padding-top: 5px;
+  }
+  
+  .rasmus-text {
+    font-family: Exo;
+    color: white;
+    font-size: 20px;
+    padding-bottom: 50px;
+  
+  }
+  
+  .anders {
+    float:none;
+    padding-left: 0px;
+    height: 300px
+  }
+  
+  .anders-title {
+    text-align: center;
+    font-size: 30px;
+    padding-top: 5px;
+  }
+  
+  .anders-text {
+    font-family: Exo;
+    color: white;
+    font-size: 20px;
+    padding-bottom: 0px;
+  
+  }
+  
+  .ketil {
+    float:none;
+    padding-left: 0px;
+    height: 300px
+  }
+  
+  .ketil-title {
+    text-align: center;
+    font-size: 30px;
+    padding-top: 5px;
+  }
+  
+  .ketil-text {
+    font-size: 20px;
+    padding-bottom: 0px;
   }
   
 }
